# teachable

./: main.py  model.py  pyproject.toml
templates/: faq.html  index.html  templates.html
