[project]
name = "teachable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "keras>=3.11.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
]
